0.02
 [Common]
 - Improve AUTHOR and LICENSE AND COPYRIGHT sections in doc.
 - Update copyright years.

 [PYX::Parser]
 - Fix SYNOPSIS section in doc.
 - Rename 'line' parameter to internal name '_line'.
 - Rename test to right name (parse -> parse_file).

0.01 2014-11-18T07:30:12+01:00
 - First version.